fix(outlays) :renderform with padding al gap

--- a/src/mk/components/forms/Input/input.module.css
+++ b/src/mk/components/forms/Input/input.module.css
@@ -11,7 +11,7 @@
   padding-right: var(--spM);
   display: flex;
   gap: var(--spXs);
-  margin-bottom: calc(var(--spL));
+  margin-bottom: calc(var(--spM));
   font-weight: var(--bRegular);
   color: var(--cWhite);
   & > div > input::placeholder {
